# task-keeper

./: .env  .envrc  .gitignore  .sdkmanrc  Amberfile  Argcfile.sh  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  Procfile  README.md  Rakefile  Taskfile.ts  Taskfile.yml  build.xml  composer.json  demo.sqlite3  deno.json  devenv-test.nix  devenv.nix  docker-compose.yml  flake.nix  jakefile.js  jbang-catalog.json  justfile  package.json  pyproject.toml  queries.sql  rust-toolchain.toml  task.sh  tasks.py
.fleet/: run.json
.github/workflows/: build.yml  release.yml
.zed/: tasks.json
src/: app.rs  command_utils.rs  errors.rs  keeper.rs  main.rs  models.rs  sq.rs
src/common/: mod.rs  notification.rs  pyproject.rs
src/managers/: amper.rs  bazel.rs  bld.rs  bundler.rs  cargo.rs  cmakeconan.rs  composer.rs  dart.rs  golang.rs  gradle.rs  kotlin_toolchain.rs  lein.rs  maven.rs  meson.rs  mix.rs  mod.rs  npm.rs  pipenv.rs  poetry.rs  rebar3.rs  requirements.rs  rye.rs  sbt.rs  swift.rs  uv.rs  xmake.rs  zig.rs
src/managers/gradle_scripts/: init-cyclonedx.gradle  init-skillsjars.gradle  init-versions.gradle
src/polyglot/: java.rs  mod.rs  node.rs  python.rs  ruby.rs  sdkman.rs
src/runners/: amberfile.rs  ant.rs  argcfile.rs  bun_shell.rs  composer.rs  denojson.rs  fleet.rs  gruntfile.rs  gulpfile.rs  jakefile.rs  jbang.rs  justfile.rs  makefile.rs  makefiletoml.rs  markdown.rs  mod.rs  nurfile.rs  packagejson.rs  poe.rs  poetry.rs  procfile.rs  rakefile.rs  rye.rs  taskfileyml.rs  taskshell.rs  taskspy.rs  usql.rs  uv_scripts.rs  vstasks.rs  xtask.rs  xtask_go.rs  zed.rs
src/templates/: Argcfile.sh  Makefile  Pipfile  deno.json  jbang-catalog.json  nurfile  tasks.json
src/templates/completion/: sq-completion.zsh
src/templates/just/: cargo.just  gradle.just  justfile  maven-sb.just  maven.just  python-venv.just  snippets.just  uv.just  zig.just
temp/: Hello.java
tests/: demo_test.rs
