[package]
name = "task-keeper"
version = "0.28.1"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Task keeper to manage tasks from different task runners"
keywords = ["task", "just", "npm", "deno"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/task-keeper"
readme = "README.md"
homepage = "https://github.com/linux-china/task-keeper"
repository = "https://github.com/linux-china/task-keeper"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tk"
path = "src/main.rs"

[[bin]]
name = "sq"
path = "src/sq.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jsonrc = "0.1"
serde-xml-rs = "0.6"
toml = "0.8"
java-properties = "2"
colored = "3"
clap = "4"
regex = "1"
dirs = "5"
dirs-sys = "0.5"
which = "7.0"
thiserror = "2"
error-stack = "0.5"
dotenv = "0.15"
shlex = "1"
cfg-if = "1"
uuid = { version = "1", features = ["v4"] }
logos = "0.15"
shell-escape = "0.1"
bytecount = "0.6.8"
just = "1.38.0"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

