[package]
name = "task-keeper"
version = "0.30.2"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Task keeper to manage tasks from different task runners"
keywords = ["task", "just", "npm", "deno"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/task-keeper"
readme = "README.md"
homepage = "https://github.com/linux-china/task-keeper"
repository = "https://github.com/linux-china/task-keeper"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tk"
path = "src/main.rs"

[[bin]]
name = "sq"
path = "src/sq.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.26", features = ["serde"] }
serde-xml-rs = "0.8"
toml = "0.9"
java-properties = "2"
colored = "3"
clap = "4.5"
regex = "1.11"
dirs = "6"
dirs-sys = "0.5"
which = "8.0"
thiserror = "2"
error-stack = "0.5"
dotenvx-rs = "0.4.8"
shlex = "1.3"
cfg-if = "1"
uuid = { version = "1.18", features = ["v4"] }
logos = "0.15"
shell-escape = "0.1"
bytecount = "0.6.9"
just = "1.42"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
async-nats = "0.42.0"
minio = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
tap = "linux-china/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
