[project]
name = "task-keeper"
description = "A cli to manage tasks from different task runners or package managers"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "linux_china", email = "libing.chen@gmail.com" }
]
license = { text = "Apache License Version 2.0" }
keywords = ["rye", "task-keeper"]
requires-python = ">=3.10"
dependencies = [
    "flask~=3.1.2"
]

[project.urls]
homepage = "https://github.com/linux-china/task-keeper"
documentation = "https://github.com/linux-china/task-keeper"
repository = "https://github.com/linux-china/task-keeper"
changelog = "https://github.com/linux-china/task-keeper/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
my_package_cli = 'demo:main'
devtest = { callable = "mypackage:test.run_tests", extras = ["test"] }

[tool.poe.tasks]
test = "pytest --cov=my_app"
serve.script = "my_app.service:run(debug=True)"
build = ["test", "_build"]

[tool.poe.tasks.test-quick]
help = "Run tests excluding those makes as slow."
cmd = "pytest -m \"not slow\""

[tool.rye.scripts]
# These three options are equivalent:
python-version = "python3 --version"
hello = { cmd = "echo 'hello'" }
hello-world = { call = "builtins:print('Hello World!')" }
all = { chain = ["hello-world","hello"] }
